# Gooberberg-Terminal

./: .gitignore  CONTRIBUTING.md  DATA_SCHEMA_CHANGES.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
apps/api-control-plane/: README.md  alembic.ini  pyproject.toml
apps/api-control-plane/alembic/: env.py
apps/api-control-plane/alembic/versions/: 20260404_0001_initial_persistence_schema.py  20260422_0002_parameter_sets_and_sweep_provenance.py  20260423_0003_artifact_manifest_metadata.py  20260425_0004_training_run_manifest_and_context.py  20260430_0005_lineage_registry_and_governance.py  20260430_0006_durable_lineage_model.py
apps/api-control-plane/app/: __init__.py  main.py  portfolio.py
apps/api-control-plane/app/api/: dependencies.py  error_mapping.py
apps/api-control-plane/app/api/routers/: alerts.py  audit.py  backtest_runs.py  control_plane.py  graph.py  health.py  jobs.py  market_data.py  model_configs.py  models.py  parameter_sets.py  parameter_sweeps.py  portfolio.py  risk.py  runs.py  strategies.py  testing_runs.py  training_runs.py  ws.py
apps/api-control-plane/app/core/: auth.py  config.py  logging.py  pipeline_observability.py
apps/api-control-plane/app/domain/: __init__.py  model_registry.py  run_metadata_governance.py  run_success_gate.py  task_definitions.py  task_registry.py
apps/api-control-plane/app/graph/: __init__.py  mock_provider.py
apps/api-control-plane/app/jobs/: __init__.py  models.py  redis_queue.py  store.py
apps/api-control-plane/app/persistence/: __init__.py  audit_access_log.py  db.py  job_events.py  models.py  repositories.py
apps/api-control-plane/app/schemas/: __init__.py  backtest_runs.py  control_plane.py  events.py  graph.py  health.py  jobs.py  market_data.py  model_catalog.py  model_configs.py  models.py  parameter_sets.py  parameter_sweeps.py  portfolio.py  run_constraints.py  strategies.py  task_catalog.py  testing_runs.py  training_runs.py
apps/api-control-plane/app/ws/: manager.py
apps/api-control-plane/src/api_control_plane/: __init__.py  main.py
apps/api-control-plane/tests/: test_alerts.py  test_audit.py  test_auth.py  test_backtest_replay_accounting.py  test_backtest_runs_api.py  test_contract_routes_and_dispatch.py  test_control_plane_router.py  test_dataset_compatibility.py  test_dataset_qualification.py  test_documented_routes.py  test_durable_lineage_schema.py  test_error_payloads.py  test_event_contracts.py  test_graph.py  test_health.py  test_import_api_control_plane.py  test_jobs_api.py  test_lineage_governance_schema.py  test_lint_model_catalog.py  test_market_data_ingestion_enhancements.py  test_model_adapter_consistency_checker.py  test_model_catalog_loader.py  test_model_catalog_schema.py  test_model_config_service.py  test_models.py  test_portfolio.py  test_replay_parity_faults.py  test_risk.py  test_run_compatibility.py  test_run_metadata_governance.py  test_strategies.py  test_task_catalog_schema.py  test_task_registry_compatibility.py  test_training_run_data_readiness.py  test_training_runs_legacy_compat.py  test_ws.py
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: main.rs
libs/py/gb_clients/: README.md  pyproject.toml
libs/py/gb_clients/src/gb_clients/: main.py  (+1 more)
libs/py/gb_clients/tests/: test_import_gb_clients.py
libs/py/gb_core/: README.md  pyproject.toml
libs/py/gb_core/tests/: test_event_log.py  test_event_schema_definitions.py  test_fault_injection_resilience.py  test_import_gb_core.py  test_lineage_spec.py  test_paper_execution.py  test_risk_monitors.py
libs/py/gb_io/: README.md  pyproject.toml
libs/py/gb_io/tests/: test_import_gb_io.py
services/service-data/: README.md  pyproject.toml
services/service-data/src/service_data/: __init__.py  main.py
services/service-data/tests/: test_gen_model_adapter_scaffold.py  test_import_service_data.py  test_ingest_adapter.py  test_market_data_adapter_and_storage_contracts.py  test_market_data_ref_schema.py  test_market_data_subsystem.py  test_provider_capabilities.py  test_provider_policy.py
services/service-inference-live/: README.md  pyproject.toml
services/service-inference-live/src/service_inference_live/: __init__.py  main.py  strategy_runner.py
services/service-inference-live/tests/: test_import_service_inference_live.py  test_intent_emission.py  test_strategy_runner.py
services/service-portfolio-state/: README.md  pyproject.toml
services/service-portfolio-state/src/service_portfolio_state/: __init__.py  main.py  schemas.py
services/service-portfolio-state/tests/: test_import_service_portfolio_state.py
services/service-risk-exec/: README.md  pyproject.toml
services/service-risk-exec/config/: strategy_risk_limits.json
services/service-risk-exec/src/service_risk_exec/: __init__.py  analytics.py  guards.py  main.py
services/service-risk-exec/tests/: test_execution_analytics.py  test_execution_engine_models.py  test_import_service_risk_exec.py  test_intent_consumer.py  test_runtime_guard.py
services/worker-research/: README.md  pyproject.toml
services/worker-research/src/worker_research/: __init__.py  main.py
services/worker-research/tests/: test_import_worker_research.py  test_worker_research_artifacts.py  test_worker_research_orchestration_flow.py
services/worker-training/: README.md  pyproject.toml
services/worker-training/src/worker_training/: __init__.py  main.py  pipeline.py
services/worker-training/tests/: test_adapter_registry.py  test_data_materializer.py  test_data_splits_advanced.py  test_import_worker_training.py  test_intraday_nvda_pipeline.py  test_metric_engine.py  test_phase1_adapters.py  test_phase2_adapters.py  test_phase3_adapters.py  test_phase4_adapters.py  test_task_heads.py  test_training_model_metadata_consistency_checker.py  test_worker_training_artifacts.py  test_worker_training_orchestration_flow.py
services/worker-training/tests/adapter_contract/: test_adapter_contract_suite.py
(+261 files in other folders)
