[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "gb-service-data"
version = "0.1.0"
description = "Skeleton package for service_data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1.0",
    "polars>=1.33,<2.0",
    "pyarrow>=21.0,<22.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/service_data"]

[tool.pytest.ini_options]
pythonpath = ["src"]
