[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "gb-service-portfolio-state"
version = "0.1.0"
description = "Skeleton package for service_portfolio_state."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/service_portfolio_state"]

[tool.pytest.ini_options]
pythonpath = ["src"]
