[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "gb-service-risk-exec"
version = "0.1.0"
description = "Skeleton package for service_risk_exec."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["redis>=5.0,<6.0", "gb-gb-core"]

[tool.hatch.build.targets.wheel]
packages = ["src/service_risk_exec"]

[tool.pytest.ini_options]
pythonpath = ["src"]
