[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "gb-worker-research"
version = "0.1.0"
description = "Skeleton package for worker_research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["redis>=5.0,<6.0", "pydantic>=2.9,<3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/worker_research"]

[tool.pytest.ini_options]
pythonpath = ["src"]
