[package]
name = "desktop-tauri"
version = "0.1.0"
description = "Gooberberg desktop shell"
authors = ["Gooberberg"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
keyring = "3.6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
