[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "gb-gb-core"
version = "0.1.0"
description = "Skeleton package for gb_core."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/gb_core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
